# Agentic-ai

streaming-ai-chatbot/: README.md  pyproject.toml
streaming-ai-chatbot/src/streaming_ai_chatbot/: __init__.py  chatbot.py
toolcalling-ai-chatbot/: README.md  pyproject.toml  requirements.txt
toolcalling-ai-chatbot/src/toolcalling_ai_chatbot/: __init__.py  chatbot.py
